<resources>
    <string name="app_name">Viewer</string>
    <string name="nav_drawer_open">Open menu</string>
    <string name="nav_drawer_close">Close menu</string>
    <string name="action_settings">Settings</string>
    <string name="no_signal">No signal</string>
    <string name="sdi_exhd" translatable="false">HD/EX</string>
    <string name="sdi_3g" translatable="false">3G</string>
    <string name="signal_level" formatted="false" translatable="false">S.LVL : 000%</string>
    <string name="a_level" formatted="false" translatable="false">A.LVL : 000%</string>
    <string name="f_level" formatted="false" translatable="false">F.LVL : 000%</string>
    <string name="focus_level" translatable="false">FOCUS : 000/000</string>
    <string name="level_good">Good</string>
    <string name="level_normal">Normal</string>
    <string name="level_ng">NG</string>
    <string name="menu_ptz">PTZ</string>
    <string name="menu_record">Record</string>
    <string name="menu_snapshot">Snapshot</string>
    <string name="menu_play">Playback</string>
    <string name="menu_poc">PoC</string>
    <string name="menu_settings">Settings</string>
    <string-array name="menu_titles">
        <item>@string/menu_ptz</item>
        <item>@string/menu_record</item>
        <item>@string/menu_snapshot</item>
        <item>@string/menu_play</item>
        <item>@string/menu_poc</item>
        <item>@string/menu_settings</item>
    </string-array>
    <string name="category_ptz">PTZ Settings</string>
    <string name="category_ptz_utc">PTZ/UTC Settings</string>
    <string name="pref_ptz_mode_sdi" translatable="false">ptz_mode_sdi</string>
    <string name="pref_ptz_mode_utc" translatable="false">ptz_mode_utc</string>
    <string name="pref_ptz_protocol" translatable="false">ptz_protocol</string>
    <string name="pref_utc_protocol_cvbs" translatable="false">utc_protocol_cvbs</string>
    <string name="pref_utc_protocol_tvi" translatable="false">utc_protocol_tvi</string>
    <string name="pref_utc_protocol_cvi" translatable="false">utc_protocol_cvi</string>
    <string name="pref_utc_protocol_ahd" translatable="false">utc_protocol_ahd</string>
    <string name="pref_ptz_address" translatable="false">ptz_address</string>
    <string name="pref_ptz_baudrate" translatable="false">ptz_baudrate</string>
    <string name="pref_ptz_termination" translatable="false">ptz_termination</string>
    <string name="pref_utc_mode" translatable="false">utc_mode</string>
    <string name="ptz_address_format" translatable="false">%03d</string>
    <string name="category_user">User Settings</string>
    <string name="pref_media_folder" translatable="false">pref_media_folder</string>
    <string name="pref_menu_transparency" translatable="false">pref_menu_transparency</string>
    <string name="pref_touch_lock" translatable="false">pref_touch_lock</string>
    <string name="pref_level_meter" translatable="false">pref_level_meter</string>
    <string name="pref_sdi_mode" translatable="false">pref_sdi_mode</string>
    <string name="ptz_mode_tx">RS-485 TX</string>
    <string name="ptz_mode_rx">RS-485 RX</string>
    <string name="ptz_mode_analyze">Analyze</string>
    <string name="ptz_mode_utc">UTC</string>
    <string name="ptz_mode_ucc">UCC</string>
    <string-array name="ptz_modes_sdi">
        <item>@string/ptz_mode_tx</item>
        <item>@string/ptz_mode_rx</item>
        <item>@string/ptz_mode_analyze</item>
        <item>@string/ptz_mode_ucc</item>
    </string-array>
    <string-array name="ptz_mode_values_sdi" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="ptz_modes_utc">
        <item>@string/ptz_mode_tx</item>
        <item>@string/ptz_mode_rx</item>
        <item>@string/ptz_mode_analyze</item>
        <item>@string/ptz_mode_utc</item>
    </string-array>
    <string-array name="ptz_mode_values_utc" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="ptz_protocols" translatable="false">
        
        <item>D-MAX</item>
        <item>DY-255RXC</item>
        <item>FineSystem</item>
        <item>Fastrax II</item>
        <item>Honeywell</item>
        
        <item>VRX-2201</item>
        <item>LG MultiX</item>
        <item>LG LPTA100</item>
        <item>Panasonic Conv</item>
        <item>Panasonic New</item>
        
        <item>Pelco-D</item>
        <item>Pelco-P</item>
        <item>Samsung Elec.</item>
        <item>Samsung Techwin</item>
        <item>Sungjin SJ100</item>
        
        <item>Sungjin SJ1000</item>
        <item>Sysmania</item>
        <item>Vicon Standard</item>
        <item>Vicon Extend</item>
        <item>Ikegami PCS35</item>
        
        <item>Ikegami PCS358</item>
        <item>NEWBORN</item>
        <item>TOKINA DMP</item>
        <item>ERNA</item>
        <item>Bosch OSRD</item>
        
        <item>Bosch BiCom</item>
        <item>CYBER SCAN1</item>
        <item>Yujin System</item>
        <item>Dynacolor DSCP</item>
        <item>Ladon</item>
        
        <item>MCU-1200N</item>
        <item>AD SpeedDome</item>
        <item>VCLTP</item>
        <item>LILIN MLP2</item>
        <item>LILIN Fast</item>
        
        <item>Pelco-CNB1</item>
        <item>Pelco-CNB2</item>
        <item>NUVICO</item>
        <item>SONY VISCA</item>
        <item>LG KPC-Z18</item>
        
        <item>CNB ZxN-20</item>
        
        
    </string-array>
    <string-array name="ptz_protocol_values" translatable="false">
        <item>0</item>
        
        <item>1</item>
        
        <item>2</item>
        
        <item>3</item>
        
        <item>4</item>
        

        <item>5</item>
        
        <item>6</item>
        
        <item>7</item>
        
        <item>8</item>
        
        <item>9</item>
        

        <item>10</item>
        
        <item>11</item>
        
        <item>12</item>
        
        <item>13</item>
        
        <item>14</item>
        

        <item>15</item>
        
        <item>16</item>
        
        <item>17</item>
        
        <item>18</item>
        
        <item>19</item>
        

        <item>20</item>
        
        <item>21</item>
        
        <item>22</item>
        
        <item>23</item>
        
        <item>24</item>
        

        <item>25</item>
        
        <item>26</item>
        
        <item>27</item>
        
        <item>28</item>
        
        <item>29</item>
        

        <item>30</item>
        
        <item>31</item>
        
        <item>32</item>
        
        <item>33</item>
        
        <item>34</item>
        

        <item>35</item>
        
        <item>36</item>
        
        <item>37</item>
        
        <item>38</item>
        
        <item>39</item>
        

        <item>40</item>
        
        
        
        
        
    </string-array>
    <string-array name="utc_protocols_cvbs" translatable="false">
        
        <item>PELCO-C</item>
        <item>A1-CCVC</item>
    </string-array>
    <string-array name="utc_protocol_values_cvbs" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="utc_protocols_tvi" translatable="false">
        <item>TVI UTC1</item>
        <item>TVI UTC2</item>
        <item>TVI UTC3</item>
    </string-array>
    <string-array name="utc_protocol_values_tvi" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="utc_protocols_ahd" translatable="false">
        <item>A-CP</item>
    </string-array>
    <string-array name="utc_protocol_values_ahd" translatable="false">
        <item>0</item>
    </string-array>
    <string-array name="utc_protocols_cvi" translatable="false">
        <item>CVI UTC1</item>
        <item>CVI UTC2</item>
        <item>CVI UTC3</item>
    </string-array>
    <string-array name="utc_protocol_values_cvi" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="utc_protocol_ahd" translatable="false">A-CP</string>
    <string-array name="ptz_baudrates" translatable="false">
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
    </string-array>
    <string-array name="ptz_baudrate_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="value_0" translatable="false">0</string>
    <string name="value_2" translatable="false">2</string>
    <string name="value_10" translatable="false">10</string>
    <string name="label_mode">Mode</string>
    <string name="label_protocol">Protocol</string>
    <string name="label_address">Address</string>
    <string name="label_baudrate">Baudrate</string>
    <string name="label_termination">Termination</string>
    <string name="label_media_folder">Storage Folder</string>
    <string name="label_level_meter">Level Meter</string>
    <string name="key_set" translatable="false">SET</string>
    <string name="key_mode" translatable="false">MODE</string>
    <string name="key_pantilt">PT</string>
    <string name="key_zoomfocus">ZF</string>
    <string name="key_ptz">PTZ</string>
    <string name="key_osd">OSD</string>
    <string name="state_on">ON</string>
    <string name="state_off">OFF</string>
    <string name="storage_internal">Internal</string>
    <string name="storage_external">External</string>
    <string name="up" translatable="false">UP</string>
    <string name="down" translatable="false">DOWN</string>
    <string name="left" translatable="false">LEFT</string>
    <string name="right" translatable="false">RIGHT</string>
    <string name="menu" translatable="false">MENU</string>
    <string name="enter" translatable="false">ENTER</string>
    <string name="back" translatable="false">BACK</string>
    <string name="exit" translatable="false">EXIT</string>
    <string name="near" translatable="false">NEAR</string>
    <string name="far" translatable="false">FAR</string>
    <string name="in" translatable="false">IN</string>
    <string name="out" translatable="false">OUT</string>
</resources>