<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/category_ptz">
        <ListPreference
            android:key="@string/pref_ptz_mode_sdi"
            android:defaultValue="@string/value_0"
            android:entries="@array/ptz_modes_sdi"
            android:entryValues="@array/ptz_mode_values_sdi"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_mode">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_ptz_protocol"
            android:defaultValue="@string/value_10"
            android:entries="@array/ptz_protocols"
            android:entryValues="@array/ptz_protocol_values"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_protocol">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_ptz_mode_utc"
            android:defaultValue="@string/value_0"
            android:entries="@array/ptz_modes_utc"
            android:entryValues="@array/ptz_mode_values_utc"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_mode">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_utc_protocol_cvbs"
            android:defaultValue="@string/value_0"
            android:entries="@array/utc_protocols_cvbs"
            android:entryValues="@array/utc_protocol_values_cvbs"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_protocol">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_utc_protocol_tvi"
            android:defaultValue="@string/value_0"
            android:entries="@array/utc_protocols_tvi"
            android:entryValues="@array/utc_protocol_values_tvi"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_protocol">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_utc_protocol_ahd"
            android:defaultValue="@string/value_0"
            android:entries="@array/utc_protocols_ahd"
            android:entryValues="@array/utc_protocol_values_ahd"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_protocol">
        </ListPreference>
        <ListPreference
            android:key="@string/pref_utc_protocol_cvi"
            android:defaultValue="@string/value_0"
            android:entries="@array/utc_protocols_cvi"
            android:entryValues="@array/utc_protocol_values_cvi"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_protocol">
        </ListPreference>
        <!--inputType=number로 하면 사칙연산을 위한 키도 표시가 된다.-->
        <!--android:inputType="phone"-->
        <!--android:digits="1234567890"-->
        <com.sscctv.seeeyesmonitor.NumberPickerPreference
            android:key="@string/pref_ptz_address"
            android:defaultValue="1"
            android:layout="@layout/preference_submenu"
            android:inputType="number"
            app:min="1"
            app:max="255"
            app:format="@string/ptz_address_format"
            android:widgetLayout="@layout/preference_widget_numberpicker"
            android:title="@string/label_address">
        </com.sscctv.seeeyesmonitor.NumberPickerPreference>
        <ListPreference
            android:key="@string/pref_ptz_baudrate"
            android:defaultValue="@string/value_2"
            android:entries="@array/ptz_baudrates"
            android:entryValues="@array/ptz_baudrate_values"
            android:layout="@layout/preference_submenu"
            android:dialogLayout="@layout/fragment_list_panel"
            android:title="@string/label_baudrate">
        </ListPreference>
        <com.sscctv.seeeyesmonitor.SwitchPreference
            android:key="@string/pref_ptz_termination"
            android:defaultValue="true"
            android:layout="@layout/preference_no_summary"
            android:widgetLayout="@layout/preference_widget_switch"
            android:title="@string/label_termination"
            android:switchTextOn="@string/state_on"
            android:switchTextOff="@string/state_off"
            tools:ignore="PrivateResource" />
    </PreferenceCategory>
</PreferenceScreen>