<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="@dimen/ptz_settings_padding"
    tools:context=".ZoomFocusControlFragment">

    <TextView
        android:id="@+id/key_up"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/in"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_down"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/out"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_left"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/near"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_right"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/far"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="end"
        android:text="@string/key_set"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_setting_"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/key_pantilt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/key_pantilt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_zoomfocus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_active"
            android:gravity="center"
            android:text="@string/key_zoomfocus"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="end"
        android:text="@string/key_mode"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_setting_"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/key_ptz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_active"
            android:gravity="center"
            android:text="@string/key_ptz"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_osd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/key_osd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/key_close"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/exit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</LinearLayout>