<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="0dp"
    android:paddingStart="10dp"
    tools:context=".OsdControlFragment">


    <TextView
        android:id="@+id/key_up"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/up"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_down"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/down"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_left"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_right"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_menu"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/menu"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_enter"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/enter"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/key_exit"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/back"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="30dp"
        android:gravity="end"
        android:text="@string/key_mode"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@drawable/rounded_setting_"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/key_ptz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/key_ptz"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_osd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_active"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/key_osd"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/key_close"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_rounded_selector"
        android:gravity="center"
        android:paddingBottom="@dimen/ptz_control_padding"
        android:paddingTop="@dimen/ptz_control_padding"
        android:text="@string/exit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</LinearLayout>