<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LevelMeterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:singleLine="true"
            android:text="@string/a_level"
            android:textColor="@color/WhiteSmoke"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/indicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:textColor="@color/WhiteSmoke"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

    <TextView
        android:id="@+id/f_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/f_level"
        android:textColor="@color/WhiteSmoke"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/focus_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/focus_level"
        android:textColor="@color/WhiteSmoke"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>
